--- a/SpringApplicationProject/src/main/webapp/index.html
+++ b/SpringApplicationProject/src/main/webapp/index.html
@@ -4,5 +4,9 @@
 	<form action="/form/forms1" method="GET" >
 <input type="submit" value="login">
 	</form>
+<form action="/form/forms" method="GET" >
+<input type="submit" value="register">
+</form>
+
 </body>
 </html>
