--- a/SpringApplicationProject/src/main/webapp/index.html
+++ b/SpringApplicationProject/src/main/webapp/index.html
@@ -1,12 +1,21 @@
 <html>
+<style>
+body{
+background-image:url("https://i.pinimg.com/originals/4c/11/66/4c1166de47eaaf96113a147950db3571.png");
+background-size:cover;
+}
+</style>
 <body>
-	<h1>Welcome...</h1>
+<center>
+	<h1>Welcome To The Shop...</h1>
 	<form action="/form/forms1" method="GET" >
-<input type="submit" value="login">
+	<input type="submit" value="login">
 	</form>
-<form action="/form/forms" method="GET" >
-<input type="submit" value="register">
-</form>
+	<form action="/form/register" method="GET" >
+	<input type="submit" value="register">
+	</form>
+	</center>
+
 
 </body>
 </html>
